--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,52 +1,29 @@
-name: Run NFL Prop Model
+name: Run NFL Prop Agent
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - run: python -m pip install --upgrade pip
-      - run: pip install -r requirements.txt
-name: Run NFL Prop Model
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-jobs:
-  run:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-      - run: python -m pip install --upgrade pip
-      - run: pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      # NEW: fetch odds via API (uses ODDS_API_KEY secret)
-      - name: Fetch odds (The Odds API)
-        env:
-          ODDS_API_KEY: ${{ secrets.ODDS_API_KEY }}
-        run: python scrapers/fetch_odds.py
-
-      - run: python run.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: outputs
-          path: out/**
-      - run: python run.py
-      - uses: actions/upload-artifact@v4
-        with:
-          name: outputs
-          path: out/**
+    - name: Run the model
+      run: |
+        python run.py
