--- a/.github/workflows/data/data/data/data/data/odds/odds/odds/model/model/model/model/model/model/model/model/.github/workflows/run.yml
+++ b/.github/workflows/data/data/data/data/data/odds/odds/odds/model/model/model/model/model/model/model/model/.github/workflows/run.yml
@@ -1,4 +1,10 @@
-name: Run NFL Prop Model
+- name: Run the model
+  working-directory: ${{ github.workspace }}
+  env:
+    PYTHONPATH: ${{ github.workspace }}
+  run: |
+    python -V
+    python run.py
 
 on:
   workflow_dispatch:
